Actions
Bug #9398
closedcron: this statement may fall through
Start date:
2018-03-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
issue found by gcc 7 build:
at.c: In function 'parse_time': at.c:961:6: error: this statement may fall through [-Werror=implicit-fallthrough=] t += 2; ~~^~~~ at.c:962:3: note: here case 10: /* YYMMDDhhmm */ ^~~~ at.c:965:7: error: this statement may fall through [-Werror=implicit-fallthrough=] if (century == 0) { ^ at.c:970:3: note: here case 8: /* MMDDhhmm */ ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 4159a98a3536461402cc63f5784a0dd919e7d82c
commit 4159a98a3536461402cc63f5784a0dd919e7d82c Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:39.000Z 9398 cron: this statement may fall through Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions